welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:23: error: Missing closing brace `}' assumed here
} 
^