welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
  var compteur:Int=0
  while (!(getX() ==getMondeLargeur()-1 && getY() == getMondeHauteur()-1)) {
    if ((getX()==6) ){
      ecritMessage(compteur)
      compteur+=1
      setPos(get(X),getY()+1)
      while(!(getX()==0)) {
        ecritMessage(compteur)
        setPos(getX()-1,getY())
        compteur+=1}}
    if (getX()==0) {
      ecritMessage(compteur)
      compteur+=1
      setPos(getX()+1,0)
      while(!(getX()==6)) {
        ecritMessage(compteur)
        setPos(getX()-1,getY())
        compteur+=1}}
    else { ecritMessage(compteur)
    setPos(getX()+1,getY())
    compteur+=1}
  ecritMessage(compteur)
}